--- a/templates/google-map.phtml
+++ b/templates/google-map.phtml
@@ -1,9 +1,9 @@
-<div id="strava_map"></div>
+<div id="strava-map-<?php echo $id ?>" class="astrava-map"></div>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyAoAUyOJ-PoLBa8QGGyWNf_A1-6Mh8f84Q&libraries=geometry&amp;sensor=false">
 </script>
-<style type="text/css"> #strava_map {width:100%;height:300px;}</style> 
+<style type="text/css"> .astrava-map { width:100%;height:300px; }</style>
 <script type='text/javascript'>
-    var map = new google.maps.Map(document.getElementById('strava_map'), {
+    var map = new google.maps.Map(document.getElementById('strava-map-<?php echo $id ?>'), {
       center: {lat: <?php echo $lat; ?>, 
       		   lng: <?php echo $lng; ?>},
       zoom: 15
