Adding support for multiple templates and adde the wordpress readme

--- a/templates/admin/page-header.phtml
+++ b/templates/admin/page-header.phtml
@@ -5,7 +5,7 @@
     <a href="?page=astrava_admin&tab=gen" class="nav-tab <?php if ($ctab == 'gen') echo 'nav-tab-active'; ?>">Settings</a>
     <a href="?page=astrava_admin&tab=templates" class="nav-tab <?php if ($ctab == 'templates') echo 'nav-tab-active'; ?>">Templates</a>
     <a href="?page=astrava_admin&tab=api" class="nav-tab <?php if ($ctab == 'api') echo 'nav-tab-active'; ?>">Connect to Strava</a>
-    <a href="?page=astrava_admin&tab=import" class="nav-tab <?php if ($ctab == 'api') echo 'nav-tab-active'; ?>">Import Activity</a>
+    <a href="?page=astrava_admin&tab=import" class="nav-tab <?php if ($ctab == 'import') echo 'nav-tab-active'; ?>">Import Activity</a>
 </h2>
 
 <form action="options.php" method="post">
